--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Fairy tales'
+- GITenberg
 title: Παραμύθια Δανικά, εκ των του Ανδερσεν
 url: http://www.gutenberg.org/ebooks/31450
